Add ignite options to run scripts